Fixed line wrap on add to cart for IE Continute shopping link to home instead of products

--- a/app/assets/stylesheets/store/reservebar.css.scss
+++ b/app/assets/stylesheets/store/reservebar.css.scss
@@ -201,7 +201,7 @@ table tbody tr.alt, table tbody tr.odd, table tfoot tr.alt, table tfoot tr.odd {
 ul#products li .product-image {padding:5px; background-color:white;min-height:110px;border:none;}
 ul#products li .product-image:hover {border:none;}
 a.product-tile-name {font-family:$ff_serif; color:$product_title_text_color;font-size:16px;line-height:1.1em; font-weight:normal;}
-a.add-to-cart {background: $button_background_color url("cart-small-white.png") no-repeat right center;}
+a.add-to-cart {background: $button_background_color url("cart-small-white.png") no-repeat right center;padding:3px 22px 3px 8px;}
 a.add-to-cart:hover {background: $button_background_hover_color url("cart-small-white.png") no-repeat right center;}
 
 
